--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 
     <!-- Defer gør at JS loades efter page load -->
     <script src="script.js" defer></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js" defer></script>
+
   </head>
 
   <body>
@@ -26,11 +26,11 @@
         </div>
 
         <div class="menuKnap">
-          <div class="openMenu" onclick="toggle()">
+          <button class="openMenu" onclick="toggle()">
             <div class="line"></div>
             <div class="line"></div>
             <div class="line"></div>
-          </div>
+          </button>
         </div>
 
         <div class="menu">
@@ -56,6 +56,7 @@
             <li class="li1 li"><a href="byvandringer.html">Byvandringer</a></li>
             <li class="li2 li"><a href="#">Om os</a></li>
             <li class="li3 li"><a href="#">Kontakt</a></li>
+            <li class="li4 li"><a href="#">English</a></li>
             
           </ul>
         </div>
@@ -65,6 +66,7 @@
             <li class="deskNavLink"><a href="home.html">Byvandringer</a></li>
             <li class="deskNavLink"><a href="#"">Om os</a></li>
             <li class="deskNavLink"><a href="#">Kontakt</a></li>
+            <li class="deskNavLink"><a href="#">English</a></li>
           </ul>
         </div>
       </nav>
@@ -75,7 +77,10 @@
 
     <main>
 
-        <h1>Test</h1>
+        <section class="heroSection">
+        <h1>Oplev København <br> helt tæt på</h1>
+        <p class="heroSubtext">Tag med Copenhagen walking tours på tur i indre København og oplev Danmarks hovedstad og sin historie på en helt ny måde</p>
+        </section>
     </main>
 
 
@@ -83,6 +88,6 @@
 <footer></footer>
 
 
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
   </body>
 </html>
