opsætning af forside elementer

--- a/home.html
+++ b/home.html
@@ -78,9 +78,60 @@
     <main>
 
         <section class="heroSection">
-        <h1>Oplev København <br> helt tæt på</h1>
-        <p class="heroSubtext">Tag med Copenhagen walking tours på tur i indre København og oplev Danmarks hovedstad og sin historie på en helt ny måde</p>
+            <h1>Oplev København <br> helt tæt på</h1>
+            <p class="heroSubtext">Tag med Copenhagen walking tours på tur i indre København og oplev Danmarks hovedstad og sin historie på en helt ny måde</p>
         </section>
+
+       
+        <article class="introText">
+            <h2>Klar på en spændende tur i Københavns gader?</h2>
+            <p>Hos Copenhagen Walking Tours tager vi dig med på en tur gennem København. Vores eksperter er klar med spændende historier og indblik i nogle af de mest prominente og historiske områder i Danmarks Hovedstad.</p>
+            <img src="" alt="">
+        </article>
+    
+
+
+    <article class="produktListFrontPage">
+      <h2></h2>
+      <p></p>
+      <button></button>
+        <div class="imageStackContainer">
+        <img src="" alt="">
+         <img src="" alt="">
+    </div>
+    </article>
+
+
+    <article>
+        <h2></h2>
+        <p></p>
+        <button class="secondaryButton" onclick="window.location.href='#';">
+            Læs mere om hvem vi er <svg></svg>
+        </button>
+        <img src="" alt="">
+    </article>
+
+<article class="testimonialSection">
+    <h3></h3>
+    <div class="testimonialFlexcontainer">
+    <div class="testimonialCardContainer">
+        <svg></svg>
+        <p></p>
+        <p></p>
+    </div>
+        <div class="testimonialCardContainer">
+        <svg></svg>
+        <p></p>
+        <p></p>
+    </div>
+        <div class="testimonialCardContainer">
+        <svg></svg>
+        <p></p>
+        <p></p>
+    </div>
+    </div>
+</article>
+
     </main>
 
 
