tilføjelse af webp billeder og justering af CTA

--- a/home.html
+++ b/home.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Copenhagen Walking Tours</title>
     <link rel="stylesheet" href="style.css" />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <!-- Defer gør at JS loades efter page load -->
     <script src="script.js" defer></script>
 
@@ -78,15 +81,21 @@
     <main>
 
         <section class="heroSection">
+            <div class="heroTextContainer">
             <h1>Oplev København <br> helt tæt på</h1>
             <p class="heroSubtext">Tag med Copenhagen walking tours på tur i indre København og oplev Danmarks hovedstad og sin historie på en helt ny måde</p>
-        </section>
+        <button class="cta">Udforsk København <span class="material-symbols-outlined">
+arrow_right_alt
+</span>
+             </button>
+        </div>
+    </section>
 
        
         <article class="introText">
             <h2>Klar på en spændende tur i Københavns gader?</h2>
             <p>Hos Copenhagen Walking Tours tager vi dig med på en tur gennem København. Vores eksperter er klar med spændende historier og indblik i nogle af de mest prominente og historiske områder i Danmarks Hovedstad.</p>
-            <img src="" alt="">
+            <img src="/images/" alt="">
         </article>
     
 
