intro, produktlist sections done

--- a/home.html
+++ b/home.html
@@ -28,15 +28,15 @@
           </a>
         </div>
 
-        <div class="menuKnap">
-          <button class="openMenu" onclick="toggle()">
+        <div class="menuKnap" >
+          <button class="openMenu" aria-label="Navigation Menu" onclick="toggle()">
             <div class="line"></div>
             <div class="line"></div>
             <div class="line"></div>
           </button>
         </div>
 
-        <div class="menu">
+        <div class="menu" >
 
           <svg
             class="closeMenu"
@@ -95,18 +95,21 @@ arrow_right_alt
         <article class="introText">
             <h2>Klar på en spændende tur i Københavns gader?</h2>
             <p>Hos Copenhagen Walking Tours tager vi dig med på en tur gennem København. Vores eksperter er klar med spændende historier og indblik i nogle af de mest prominente og historiske områder i Danmarks Hovedstad.</p>
-            <img src="/images/" alt="">
+            <img src="/images/herofirstimg.webp" alt="Københavns gader">
         </article>
     
 
 
     <article class="produktListFrontPage">
-      <h2></h2>
-      <p></p>
-      <button></button>
+      <h2>Flere unikke og fantastiske ture</h2>
+      <p>Hos Copenhagen Walking Tours har vi specialiseret os i at genfortælle den mangfoldige bys historie på en underholdende og spændende måde.</p>
+      <p>Vores byvandringer henvender sig til alle aldersgrupper, om det er skoleudflugter, kulturarrangementer, pensionist- og studieture eller til helt andre formål.</p>
+       <button class="cta" onclick="window.location.href='byvandringer.html';">
+            Find min byvandring <span class="material-symbols-outlined">arrow_right_alt</span>
+        </button>
         <div class="imageStackContainer">
-        <img src="" alt="">
-         <img src="" alt="">
+        <img class="imageBottom" src="/images/DroneShot.webp" alt="">
+         <img class="imageTop" src="/images/womanBehind.webp" alt="">
     </div>
     </article>
 
@@ -115,7 +118,7 @@ arrow_right_alt
         <h2></h2>
         <p></p>
         <button class="secondaryButton" onclick="window.location.href='#';">
-            Læs mere om hvem vi er <svg></svg>
+            Læs mere om hvem vi er <span class="material-symbols-outlined">arrow_right_alt</span>
         </button>
         <img src="" alt="">
     </article>
