--- a/home.html
+++ b/home.html
@@ -102,8 +102,8 @@ arrow_right_alt
 
     <article class="produktListFrontPage">
       <h2>Flere unikke og fantastiske ture</h2>
-      <p>Hos Copenhagen Walking Tours har vi specialiseret os i at genfortælle den mangfoldige bys historie på en underholdende og spændende måde.</p>
-      <p>Vores byvandringer henvender sig til alle aldersgrupper, om det er skoleudflugter, kulturarrangementer, pensionist- og studieture eller til helt andre formål.</p>
+ <p>Vi tilbyder en række spændende guidede ture i indre København. Alle har deres unikke tema og fokus på et helt specielt aspekt af Københavns historie.</p>
+ <p>Kom nærmere byen og bliv klogere på byområdernes historie og den kulturelle betydning for nogle af de mest kendte områder.</p>
        <button class="cta" onclick="window.location.href='byvandringer.html';">
             Find min byvandring <span class="material-symbols-outlined">arrow_right_alt</span>
         </button>
@@ -114,20 +114,26 @@ arrow_right_alt
     </article>
 
 
-    <article>
-        <h2></h2>
-        <p></p>
+    <article class="aboutFront">
+        <div class="aboutbgwrap">
+        <h2>Hos Copenhagen Walking Tours formidler vi byens historie</h2>
+         <p>Hos Copenhagen Walking Tours har vi specialiseret os i at genfortælle den mangfoldige bys historie på en underholdende og spændende måde.</p>
+      <p>Vores byvandringer henvender sig til alle aldersgrupper, om det er skoleudflugter, kulturarrangementer, pensionist- og studieture eller til helt andre formål.</p>
         <button class="secondaryButton" onclick="window.location.href='#';">
             Læs mere om hvem vi er <span class="material-symbols-outlined">arrow_right_alt</span>
         </button>
         <img src="" alt="">
+    </div>
     </article>
 
 <article class="testimonialSection">
-    <h3></h3>
+    <h3>Læs hvad vores deltagere siger om vores byvandringer</h3>
     <div class="testimonialFlexcontainer">
     <div class="testimonialCardContainer">
-        <svg></svg>
+        <svg><svg width="44" height="44" viewBox="0 0 44 44" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M11.9167 18.3337C11.5079 18.3337 11.1155 18.396 10.725 18.4528C10.8515 18.0275 10.9817 17.5948 11.1907 17.2062C11.3997 16.6415 11.726 16.152 12.0505 15.6588C12.3219 15.1253 12.8004 14.7642 13.1524 14.3077C13.5209 13.864 14.0232 13.5688 14.421 13.2003C14.8115 12.8153 15.323 12.6228 15.73 12.3515C16.1554 12.1077 16.5257 11.8382 16.9217 11.7098L17.9099 11.3028L18.7789 10.9417L17.8897 7.38867L16.7952 7.65267C16.445 7.74067 16.0179 7.84334 15.532 7.96617C15.0352 8.05784 14.5054 8.309 13.915 8.53817C13.332 8.7985 12.6574 8.97451 12.0304 9.39251C11.3997 9.79217 10.6719 10.1258 10.0302 10.6612C9.40869 11.213 8.65886 11.6915 8.10519 12.3937C7.50019 13.05 6.90252 13.7393 6.43869 14.524C5.90152 15.272 5.53669 16.0933 5.15169 16.9055C4.80336 17.7177 4.52286 18.5482 4.29369 19.3548C3.85919 20.9718 3.66486 22.5082 3.58969 23.8227C3.52736 25.139 3.56402 26.2335 3.64102 27.0255C3.66852 27.3995 3.71986 27.7625 3.75652 28.0137L3.80236 28.3217L3.85002 28.3107C4.1761 29.8339 4.92675 31.2336 6.01512 32.348C7.1035 33.4624 8.48513 34.2459 10.0002 34.6078C11.5153 34.9698 13.1018 34.8954 14.5764 34.3934C16.051 33.8913 17.3533 32.982 18.3326 31.7707C19.312 30.5594 19.9284 29.0956 20.1106 27.5485C20.2928 26.0015 20.0333 24.4346 19.3621 23.0289C18.6909 21.6232 17.6355 20.4363 16.3179 19.6054C15.0003 18.7745 13.4744 18.3336 11.9167 18.3337V18.3337ZM32.0834 18.3337C31.6745 18.3337 31.2822 18.396 30.8917 18.4528C31.0182 18.0275 31.1484 17.5948 31.3574 17.2062C31.5664 16.6415 31.8927 16.152 32.2172 15.6588C32.4885 15.1253 32.967 14.7642 33.319 14.3077C33.6875 13.864 34.1899 13.5688 34.5877 13.2003C34.9782 12.8153 35.4897 12.6228 35.8967 12.3515C36.322 12.1077 36.6924 11.8382 37.0884 11.7098L38.0765 11.3028L38.9455 10.9417L38.0564 7.38867L36.9619 7.65267C36.6117 7.74067 36.1845 7.84334 35.6987 7.96617C35.2019 8.05784 34.672 8.309 34.0817 8.53817C33.5005 8.80034 32.824 8.9745 32.197 9.39434C31.5664 9.794 30.8385 10.1277 30.1969 10.663C29.5754 11.2148 28.8255 11.6933 28.2719 12.3937C27.6669 13.05 27.0692 13.7393 26.6054 14.524C26.0682 15.272 25.7034 16.0933 25.3184 16.9055C24.97 17.7177 24.6895 18.5482 24.4604 19.3548C24.0259 20.9718 23.8315 22.5082 23.7564 23.8227C23.694 25.139 23.7307 26.2335 23.8077 27.0255C23.8352 27.3995 23.8865 27.7625 23.9232 28.0137L23.969 28.3217L24.0167 28.3107C24.3428 29.8339 25.0934 31.2336 26.1818 32.348C27.2702 33.4624 28.6518 34.2459 30.1669 34.6078C31.6819 34.9698 33.2685 34.8954 34.7431 34.3934C36.2176 33.8913 37.5199 32.982 38.4993 31.7707C39.4787 30.5594 40.0951 29.0956 40.2773 27.5485C40.4595 26.0015 40.2 24.4346 39.5288 23.0289C38.8576 21.6232 37.8021 20.4363 36.4846 19.6054C35.167 18.7745 33.6411 18.3336 32.0834 18.3337V18.3337Z" fill="#FF976B"/>
+</svg>
+</svg>
         <p></p>
         <p></p>
     </div>
