--- a/home.html
+++ b/home.html
@@ -66,7 +66,7 @@
 
         <div class="deskTopNav">
           <ul class="desktopUl">
-            <li class="deskNavLink"><a href="home.html">Byvandringer</a></li>
+            <li class="deskNavLink"><a href="byvandringer.html">Byvandringer</a></li>
             <li class="deskNavLink"><a href="#"">Om os</a></li>
             <li class="deskNavLink"><a href="#">Kontakt</a></li>
             <li class="deskNavLink"><a href="#">English</a></li>
@@ -180,7 +180,7 @@ Vi lærte en masse og var godt underholdt hele vejen igennem.</p>
             <div class="footerFlex">
             <p class="listHeader">Information</p>
             <ul class="listFlex">
-                <li> <a href="byvandringer.html">Byvandringer</a></li>
+                <li><a href="byvandringer.html">Byvandringer</a></li>
                 <li><a href="#">Kontakt</a></li>
                 <li><a href="#">Om os</a></li>
                 <li><a href="#">Betaling</a></li>
@@ -193,7 +193,7 @@ Vi lærte en masse og var godt underholdt hele vejen igennem.</p>
             <ul class="listFlex">
                 <li><a href="#"> Privatlivspolitik </a></li>
                 <li><a href="#"> Ved afbud </a></li>
-                <li> <a href="#">Cookies & indstillinger </a></li>
+                <li><a href="#">Cookies & indstillinger </a></li>
             </ul>
         </div>
     </div>
