single page done. Mangler resten af user flow

--- a/christianshavntur.html
+++ b/christianshavntur.html
@@ -87,10 +87,11 @@
     </section>
 
 <article class="singleIntro">
+    <div class="singleIntroContainer">
     <h2>Tag med på en unik tur gennem Christianshavns gader</h2>
     <p>På byvandringen på Christianshavn får du særligt indblik i hvordan det udviklede sig fra selvstændig købstad, til at blive et helt specielt samlingspunkt for de rige storkøbmænd og de brogede havnearbejdere.
 <br>På turen vil du opleve sammenstødet mellem samfundsklasserne, de historiske bygninger, de 400 år gamle handelsgårde og hvordan traditon og kultur har udviklet sig på Christianshavn igennem tiden. </p>
-
+</div>
 <div class="bookContainer">
     <div class="infoSectionFlex">
         <div class="iconFlex">
