--- a/home.html
+++ b/home.html
@@ -184,6 +184,7 @@ Vi lærte en masse og var godt underholdt hele vejen igennem.</p>
                 <li><a href="#">Kontakt</a></li>
                 <li><a href="#">Om os</a></li>
                 <li><a href="#">Betaling</a></li>
+                <li><a href="#">Sitemap</a></li>
             </ul>
         </div>
     </div>
