--- a/byvandringer.html
+++ b/byvandringer.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Copenhagen Walking Tours</title>
+    <meta name="robots" content="noindex">
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -200,6 +201,7 @@ Vi lærte en masse og var godt underholdt hele vejen igennem.</p>
                 <li><a href="#">Kontakt</a></li>
                 <li><a href="#">Om os</a></li>
                 <li><a href="#">Betaling</a></li>
+                <li><a href="#">Sitemap</a></li>
             </ul>
         </div>
     </div>
