--- a/home.html
+++ b/home.html
@@ -85,10 +85,10 @@
             <div class="heroTextContainer">
             <h1>Oplev København <br> helt tæt på</h1>
             <p class="heroSubtext">Tag med Copenhagen walking tours på tur i indre København og oplev Danmarks hovedstad og sin historie på en helt ny måde</p>
-        <button class="cta">Udforsk København <span class="material-symbols-outlined">
+        <a href="byvandringer.html"><button class="cta">Udforsk København <span class="material-symbols-outlined">
 arrow_right_alt
 </span>
-             </button>
+             </button></a>
         </div>
     </section>
 
