--- a/home.html
+++ b/home.html
@@ -177,25 +177,25 @@ Vi lærte en masse og var godt underholdt hele vejen igennem.</p>
             <p class="footerTitle">Copenhagen Walking Tours</p>
             <p class="footerSubtitle">Oplev Københavns historie helt tæt på</p>
         </div>
-        <div class="footerItemContainer2">
+        <div class="footerItemContainer2" role="list" aria-label="Information">
             <div class="footerFlex">
             <p class="listHeader">Information</p>
             <ul class="listFlex">
                 <li><a href="byvandringer.html">Byvandringer</a></li>
-                <li><a href="#">Kontakt</a></li>
-                <li><a href="#">Om os</a></li>
-                <li><a href="#">Betaling</a></li>
-                <li><a href="#">Sitemap</a></li>
+                <li aria-label="Information"><a href="#">Kontakt</a></li>
+                <li aria-label="Information"><a href="#">Om os</a></li>
+                <li aria-label="Information"><a href="#">Betaling</a></li>
+                <li aria-label="Information"><a href="#">Sitemap</a></li>
             </ul>
         </div>
     </div>
-        <div class="footerItemContainer3">
+        <div class="footerItemContainer3" role="list" aria-label="Vilkår">
         <div class="footerFlex">
-            <p class="listHeader">Vilkår</p>
+            <p class="listHeader" >Vilkår</p>
             <ul class="listFlex">
-                <li><a href="#"> Privatlivspolitik </a></li>
-                <li><a href="#"> Ved afbud </a></li>
-                <li><a href="#">Cookies & indstillinger </a></li>
+                <li aria-label="Privatlivspolitik"><a href="#"> Privatlivspolitik </a></li>
+                <li aria-label="ved afbud"><a href="#"> Ved afbud </a></li>
+                <li aria-label="Cookies og indstillinger"><a href="#">Cookies & indstillinger </a></li>
             </ul>
         </div>
     </div>
