--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Copenhagen Walking Tours front page." />
     <title>Copenhagen Walking Tours</title>
     <meta name="robots" content="noindex">
     <link rel="stylesheet" href="style.css" />
